# better-cookiecutter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
better_cookiecutter/: __init__.py
cookiebutter/: __init__.py
tests/: cookiecutter.yml  test_cookiebutter.py
tests/{{ cookiecutter.folder_name }}/: text.txt
